Handle logging without Lombok since some initially unnoticed issues resulted. Initial support for using infinispan to store/load prime datasets.