@@ -3,19 +3,21 @@ package com.starcases.prime.base.prefixtree;
 import java.math.BigInteger;
 import java.util.Map;
 import java.util.TreeMap;
-import java.util.concurrent.ConcurrentLinkedQueue;
+import java.util.concurrent.ConcurrentLinkedDeque;
 import java.util.concurrent.ConcurrentSkipListMap;
+import java.util.logging.Logger;
 
 import com.starcases.prime.base.AbstractPrimeBaseGenerator;
 import com.starcases.prime.base.BaseTypes;
 import com.starcases.prime.intfc.PrimeSourceIntfc;
 
 import lombok.NonNull;
-import lombok.extern.java.Log;
 
-@Log
+
 public class BasePrefixTree extends AbstractPrimeBaseGenerator
 {
+	private static final Logger log = Logger.getLogger(BasePrefixTree.class.getName());
+
 	final Map<BigInteger, PrefixTreeNode> prefixMap = new ConcurrentSkipListMap<>();
 
 	@NonNull
@@ -23,13 +25,14 @@ public class BasePrefixTree extends AbstractPrimeBaseGenerator
 
 	public BasePrefixTree(@NonNull PrimeSourceIntfc ps)
 	{
-		super(ps, log);
+		super(ps);
 	}
 
 	/**
 	 * top-level function; iterate over entire dataset to reduce every Prime
 	 * @param maxReduce
 	 */
+	@Override
 	public void genBases()
 	{
 		System.out.println(String.format("%n"));
@@ -40,11 +43,11 @@ public class BasePrefixTree extends AbstractPrimeBaseGenerator
 					try
 					{
 						final var origBaseIdxs = curPrime.getPrimeBaseData().getPrimeBaseIdxs().get(0);
-						final var curPrimePrefixIdxs = new ConcurrentLinkedQueue<Integer>(origBaseIdxs);
+						final var curPrimePrefixIdxs = new ConcurrentLinkedDeque<Integer>(origBaseIdxs);
 
 						// Prefixes don't include the Prime (n-1) item per the definition of "prefix" used.
 						if (!curPrimePrefixIdxs.isEmpty())
-							curPrimePrefixIdxs.remove(curPrimePrefixIdxs.size()-1);
+							curPrimePrefixIdxs.removeLast();
 
 						final var curPrefixIdxsIt = curPrimePrefixIdxs.stream().iterator();
 						var curPrefixMap = prefixMap;
